# macropad-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config
.github/: dependabot.yml
cross/: Cargo.toml
cross/app/: Cargo.toml
cross/app/src/: logger.rs  macropad.rs  main.rs  neopixel.rs  oled_display.rs  panic.rs  rotary_enc.rs  usb.rs
cross/app/src/keyboard/: keycode.rs  mod.rs
debounce/: Cargo.toml
debounce/src/: lib.rs  tests.rs
host-target-tests/: Cargo.toml
host-target-tests/tests/: example.rs
macropad/: Cargo.toml  memory.x
macropad/.cargo/: config
macropad/src/: debounce.rs  debounced_input_array.rs  display_controller.rs  keypad_controller.rs  keypad_view.rs  logger.rs  macropad_model.rs  main.rs  models.rs  number_view.rs  overlays.rs  panic_display.rs  status_view.rs  text_view.rs  time.rs  timer_clock.rs
macropad/src/models/: application_model.rs  keypad_model.rs  mod.rs
macropad/src/views/: mod.rs  screensaver_view.rs  status_view.rs  text_view.rs
src/: logger.rs  macropad.rs  main.rs  neopixel.rs  oled_display.rs  panic.rs
