[package]
authors = ["DLKJ"]
edition = "2021"
name = "macropad"
version = "0.1.0"
license = "MIT"

# makes `cargo check --all-targets` work
[[bin]]
name = "macropad"
bench = false
doctest = false
test = false

[dependencies]
embedded-hal = { version = "0.2", features=["unproven"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
rp2040-boot2 = { version = "0.2" }
adafruit-macropad = { version = "0.1" }
panic-persist = { version = "0.3", features = ["utf8"] }
log = { version = "0.4", default-features = false }
embedded-time = "0.12"
sh1106 = "0.4"
embedded-graphics = "0.7"
embedded-text = { version = "0.5", default-features = false }
heapless = { version = "0.7"}
atomic-polyfill = "0.1"
usb-device= "0.2"
usbd-hid-devices = { git = "https://github.com/dlkj/usbd-hid-devices" }
frunk = { version = "0.4", default-features = false }
hash32 = "0.2"
hash32-derive = "0.1"
packed_struct = { version = "0.10", default-features = false }
num-traits = { version = "0.2", default-features = false }

#pio = { version = "0.1" }
#ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs", rev = "83fc175fd99f230e477f6fc4a0802e29fd8dcd6f" }
#smart-leds = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
#NB USB may fail to init on windows if otp-level is not set
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations