[package]
authors = ["Daniel KJ"]
edition = "2021"
name = "app"
version = "0.1.0"

# makes `cargo check --all-targets` work
[[bin]]
name = "app"
bench = false
doctest = false
test = false

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.7", features=["unproven"] }
usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.6.0"
sh1106 = "0.4.0"

adafruit-macropad = { version = "0.2.0" }
rp2040-boot2 = { version = "0.2.0" }
pio = { version = "0.2.0" }
ws2812-pio = { git = "https://github.com/ithinuel/ws2812-pio-rs" }

embedded-time = "0.12.0"
embedded-graphics = "0.7.1"
embedded-text = {version = "0.5.0", default-features = false }
smart-leds = "0.3"

arrayvec = { version = "0.7.2", default-features = false }
log = "0.4.17"
itertools = { version = "0.10.1", default-features = false }
bitflags = "1.3"

debounce = { path = "../../debounce"}