[package]
authors = ["Daniel KJ"]
edition = "2021"
name = "app"
version = "0.1.0"

# makes `cargo check --all-targets` work
[[bin]]
name = "app"
bench = false
doctest = false
test = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2", features=["unproven"] }
usb-device= "0.2"
usbd-serial = "0.1"
usbd-hid = "0.6"
sh1106 = "0.4"

adafruit-macropad = { version = "0.3" }
rp2040-boot2 = { version = "0.2" }
pio = { version = "0.2" }
ws2812-pio = { version = "0.3" }

embedded-time = "0.12"
embedded-graphics = "0.7"
embedded-text = {version = "0.5", default-features = false }
smart-leds = "0.3"

arrayvec = { version = "0.7", default-features = false }
log = "0.4"
itertools = { version = "0.11", default-features = false }
bitflags = "1.3"

debounce = { path = "../../debounce"}